# wcc

./: INSTALL  LICENSE  README  wcc.cabal
Codec/Image/: PNG.hs
Codec/Image/PNG/Internal/: Parser.hs
Output/: WCC.prof  WCC.time.norm.prof  camillananna418000.txt  debugTest.fromc.raw  debugTest.raw  edd.NEW.fromc.raw  edd.NEW.raw  example_dyad_data.txt  tderr
Source/: #WCCTest.hs#  CommandLine.hs  CommandLine.hs~  ConsoleProg.hs  ConsoleProg.hs~  DebugPrint.hs  DebugUtils.hs  Output.hs  Output.hs~  Parse.hs  Parse.hs~  Test.hs  Test.hs~  Utils.hs  Utils.hs~  WCCTest  WCCTest.hs~  testData.in
Source/Codecs/: PngCreate.hi  PngCreate.hs  PngCreate.hs~  pngcreate~
Source/Data/ByteString/Lazy/: Double.hi  Double.hs  Double.hs~  ShowDouble.hi  ShowDouble.hs
Source/Garbage/: PngNy.hs  Test.hs
Source/Math/Statistics/: LoadTest.hs  WCC.hi  WCC.hs  WCC.hs~  WCC_NEW.hi  WCC_NEW.hs  WCC_OLD.hi  WCC_OLD.hs  WCC_OLD.hs~
Source/Math/Statistics/WCC/: Types.hi  Types.hs  Types.hs~  WCCTest.hs~
